# gl-template

./: .gitmodules  CMakeLists.txt
src/program/: CMakeLists.txt
src/program/src/: main.cpp
src/template/: CMakeLists.txt
src/template/include/: camera.h  key_input.h  logger.h  shader.h  template_pch.h  util.h  vertex.h  vertex_buffer.h  window.h
src/template/src/: camera.cpp  key_input.cpp  logger.cpp  shader.cpp  template_pch.cpp  vertex_buffer.cpp  window.cpp
template/: CMakeLists.txt
